@@ -1,7 +1,7 @@
 .\"
-.\" $Id: smi_config.3.in,v 1.3 1999/06/04 20:39:10 strauss Exp $
+.\" $Id: smi_config.3.in,v 1.4 1999/06/08 20:16:12 strauss Exp $
 .\"
-.TH smi_config 3  "June 4, 1999" "IBR" "SMI Management Information Library"
+.TH smi_config 3  "December 10, 1999" "IBR" "SMI Management Information Library"
 .SH NAME
 smiInit, smiSetErrorLevel, smiGetFlags, smiSetFlags,
 smiLoadModule, smiGetPath, smiSetPath \- SMI library
@@ -31,6 +31,9 @@ configuration routines
 .RE
 .sp
 .BI "int smiSetPath(char *" path );
+.RE
+.sp
+.BI "int smiReadConfig(char *" filename );
 .RE
 .fi
 .SH DESCRIPTION
@@ -76,10 +79,15 @@ form "DIR1:DIR2:...", if NULL if no path is set.
 The application should free this string if it is
 no longer needed. \fBsmiSetPath()\fP sets the search path to
 \fIpath\fP.
+.PP
+The \fBsmiReadConfig()\fP function reads the configuration file \fIfilename\fP.
+By default, on startup the global configuration file and a user configuration
+file are read implicitly.
 .SH "RETURN VALUES"
 The functions \fBsmiLoadModule()\fP returns the
 name of the loaded module, of NULL if it could not be loaded.
-\fBsmiSetPath()\fP returns 0 on success, or a negative value on
+\fBsmiSetPath()\fP and \fBsmiSetPath()\fP return 0 on success, or a
+negative value on
 error. \fBsmiGetFlags()\fP returns the current set of flags.
 \fBsmiGetPath()\fP returns a copy of the MIB module search path or NULL
 if no path is set. Other functions are void.
